<resources>
    <string name="app_name">Calendar IQ</string>

    <!-- Calendar List Fragment -->
    <string name="calendarListFragment_instructions">Select the calendars to sync with your watch.</string>
    <string name="calendarListFragment_menu_refresh">Refresh</string>
    <string name="calendarListFragment_menu_log">Sync history</string>
    <string name="calendarListFragment_menu_settings">Settings</string>

    <!-- Log Fragment -->
    <string name="logFragment_label">Sync history</string>
    <string name="logFragment_logViewItem_syncTime">%1$ta, %1$tb %1$te %1$tY, %1$tT</string>
    <plurals name="logFragment_logViewItem_syncDetails_success">
        <item quantity="one">Successfully synced %1$d app.</item>
        <item quantity="other">Successfully synced %1$d apps.</item>
    </plurals>

    <!-- Check Connect IQ Fragment -->
    <string name="checkConnectIQFragment_iconContentDescription">Warning Icon</string>
    <string name="checkConnectIQFragment_heading">Garmin Connect</string>
    <string name="checkConnectIQFragment_body">…must be installed to use this app.</string>
    <string name="checkConnectIQFragment_playStoreButtonText">Open Play Store</string>

    <!-- Check Calendar Permissions Fragment -->
    <string name="checkCalendarPermFragment_iconContentDescription">Warning Icon</string>
    <string name="checkCalendarPermFragment_heading">Calendar Permissions</string>
    <string name="checkCalendarPermFragment_body">We need access to the calendar in order to send appointments to your Garmin device.\n\nActivate calendar access for this app to continue using it.</string>

    <!-- Calendar View Item -->
    <string name="calendarViewItem_calendarColor">Calendar color</string>

    <!-- Settings Activity -->
    <string name="settingsActivity_title">Settings</string>
    <string name="settingsActivity_sending">Sending appointments…</string>

    <!-- Sync Service -->
    <string name="watchSyncService_description">Sends appointments to Garmin devices.</string>

    <!-- Preferences -->
    <string name="pref_cat_what">What to Sync</string>

    <string name="pref_appointments">Appointments</string>
    <string name="pref_appointments_summary">Sync up to %1s upcoming appointments.</string>
    <string-array name="pref_appointments_entries">
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="pref_appointments_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>

    <string name="pref_interval">Interval</string>
    <string name="pref_interval_summary">Sync appointments from upcoming %1s.</string>
    <string-array name="pref_interval_entries">
        <item>1 day</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>4 weeks</item>
    </string-array>
    <string-array name="pref_interval_values">
        <item>1</item>
        <item>3</item>
        <item>7</item>
        <item>14</item>
        <item>28</item>
    </string-array>

    <string name="pref_cat_when">When to Sync</string>

    <string name="pref_frequency">Frequency</string>
    <string name="pref_frequency_summary">Sync at most every %1s.</string>
    <string-array name="pref_frequency_entries">
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="pref_frequency_values">
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>

    <string name="pref_last_sync">Sync now</string>
    <plurals name="pref_last_sync_summary">
        <item quantity="one">Last synced %1$d app on %2$tB %2$te, %2$tY at %2$tH:%2$tM.</item>
        <item quantity="other">Last synced %1$d apps on %2$tB %2$te, %2$tY at %2$tH:%2$tM.</item>
    </plurals>

    <string name="pref_cat_about">About</string>

    <string name="pref_app_version">Calendar IQ Version</string>

</resources>
